- Fixed the alignment issues of the text-content.

--- a/sass/1-helpers/_media.scss
+++ b/sass/1-helpers/_media.scss
@@ -3,19 +3,19 @@
 
 // Conatiner width
 @media (min-width: 768px) {
-  .container {
+  .container, .text-box {
     width: 750px;
   }
 }
 
 @media (min-width: 992px) {
-  .container {
+  .container, .text-box {
     width: 970px;
   }
 }
 
 @media (min-width: 1200px) {
-  .container {
+  .container, .text-box {
     width: 1170px;
   }
 }
@@ -32,5 +32,13 @@
 @media (max-width: 768px) {
   .nav_list {
     display: none !important;
+  }
+}
+
+// Banner Responsive
+
+@media (max-width: 768px) {
+.overlay:after {
+  border-left: 440px solid orange !important;
   }
 }
