--- a/sass/4-layout/_banner.scss
+++ b/sass/4-layout/_banner.scss
@@ -9,24 +9,41 @@
   max-height: 700px;
 }
 
+
 .construction {
   height: 100vh;
   display: flex;
   background-image: url("../assets/images/Housing-Home-Neighborhood-Construction-Intelligence-Header-Alt-02.jpg");
 }
 
+.content_container {
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 .overlay {
+  content: "";
   position: absolute;
   width: 32%;
   height: 100vh;
   background-color: orange;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
 }
 
 .overlay:after {
   content: "";
   position: absolute;
   left: 100%;
-  top: 0px;
+  top: 0px; 
   width: 0;
   height: 0;
   border-left: 280px solid orange;
@@ -34,19 +51,47 @@
   border-bottom: 350px solid transparent;
 }
 
-.text-box {
-    position: absolute;
-    top: 10%;
-    left: 65%;
-    z-index: 3;
-    min-width: 550px;
-}
-
 .headline {
+  margin-bottom: 20px;
   font-weight: 800;
   font-size: xxx-large;
   text-transform: uppercase;
   color: #fff;
+}
+
+.headline::after {
+  content: "";
+    display: block;
+    margin-top: 20px;
+    width: 390px;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #fff;
+}
+
+.banner-text {
+  font-size: large;
+  color: #fff;
+}
+
+.reliable {
+  font-weight: 500;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.contact_me {
+  margin-top: 5px;
+  line-height: 50px;
+  padding: 10px 30px;
+  font-size: 1.25rem;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  font-family: inherit;
+  color: #dd;
+  background-color: #fff;
 }
 
 // .second_layer {
@@ -66,17 +111,4 @@
 //   border-top: 390px solid transparent;
 //   height: 500px;
 //   left: 100%;
-// }
-
-
-
-// .under_layer:after {
-//     content: "";
-//     left: 100%;
-//     top: 0px;
-//     width: 0;
-//     height: 0;
-//     border-left: 120px solid #fff;
-//     border-top: 350px solid transparent;
-//     border-bottom: 350px solid transparent;
 // }
